Fix: notice api
